-- ==========================================
-- 회원 테이블
-- ==========================================
CREATE TABLE users (
    user_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    login_id VARCHAR2(30) UNIQUE NOT NULL,
    password_hash VARCHAR2(255) NOT NULL,
    nickname VARCHAR2(30) UNIQUE NOT NULL,
    email VARCHAR2(255) UNIQUE NOT NULL,
    role VARCHAR2(10) DEFAULT 'USER' NOT NULL,
    status VARCHAR2(20) DEFAULT 'ACTIVE' NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL
);

-- 회원 권한
ALTER TABLE users
ADD CONSTRAINT chk_users_role
CHECK (role IN ('USER', 'ADMIN'));

-- 회원 상태
ALTER TABLE users
ADD CONSTRAINT chk_users_status
CHECK (status IN ('ACTIVE', 'SUSPENDED', 'WITHDRAWN'));

-- ==========================================
-- 로그인 로그 테이블
-- ==========================================
CREATE TABLE login_logs (
    log_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id NUMBER NOT NULL,
    ip_address VARCHAR2(45) NOT NULL,
    user_agent VARCHAR2(255),
    status VARCHAR2(20) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT fk_login_logs_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
        ON DELETE CASCADE
);

-- 로그인 로그 인덱스
CREATE INDEX idx_login_logs_user_created
ON login_logs (user_id, created_at);

CREATE INDEX idx_login_logs_ip_created
ON login_logs (ip_address, created_at);

-- ==========================================
-- 관리자 활동 로그 테이블
-- ==========================================
CREATE TABLE admin_action_logs (
    log_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    admin_id NUMBER NOT NULL,
    action_type VARCHAR2(50) NOT NULL,
    target_type VARCHAR2(30) NOT NULL,
    target_id NUMBER NOT NULL,
    reason VARCHAR2(255),
    ip_address VARCHAR2(45) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT fk_admin_action_logs_admin
        FOREIGN KEY (admin_id)
        REFERENCES users(user_id)
);

-- 관리자 활동 로그 인덱스
CREATE INDEX idx_admin_logs_admin_created
ON admin_action_logs (admin_id, created_at);

CREATE INDEX idx_admin_logs_target
ON admin_action_logs (target_type, target_id);

-- ==========================================
-- 신고 테이블
-- ==========================================
CREATE TABLE reports (
    report_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reporter_id NUMBER NOT NULL,
    target_type VARCHAR2(20) NOT NULL,
    target_id NUMBER NOT NULL,
    reason VARCHAR2(255) NOT NULL,
    status VARCHAR2(20) DEFAULT 'PENDING' NOT NULL,
    resolved_by NUMBER,
    resolved_at TIMESTAMP,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT fk_reports_reporter
        FOREIGN KEY (reporter_id)
        REFERENCES users(user_id),

    CONSTRAINT fk_reports_resolver
        FOREIGN KEY (resolved_by)
        REFERENCES users(user_id)
);

-- 신고 대상 유형
ALTER TABLE reports
ADD CONSTRAINT chk_reports_target_type
CHECK (target_type IN ('POST', 'COMMENT', 'USER'));

-- 신고 처리 상태
ALTER TABLE reports
ADD CONSTRAINT chk_reports_status
CHECK (status IN ('PENDING', 'REVIEWED', 'RESOLVED', 'REJECTED'));

-- 신고 인덱스
CREATE INDEX idx_reports_target
ON reports (target_type, target_id);

CREATE INDEX idx_reports_status_created
ON reports (status, created_at);

-- ==========================================
-- 영화 테이블
-- =========================================
CREATE TABLE movies (
    movie_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tmdb_id NUMBER UNIQUE NOT NULL,
    title VARCHAR2(255) NOT NULL,
    original_title VARCHAR2(255),
    overview CLOB,
    runtime NUMBER,
    release_date DATE,
    poster_path VARCHAR2(255),
    backdrop_path VARCHAR2(255),
    vote_average NUMBER(3,1) DEFAULT 0.0 NOT NULL,
    vote_count NUMBER DEFAULT 0 NOT NULL,
    popularity NUMBER(10,3) DEFAULT 0.0 NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL
);

-- 영화 인덱스
CREATE INDEX idx_movies_title
ON movies (title);

CREATE INDEX idx_movies_release_date
ON movies (release_date);

CREATE INDEX idx_movies_popularity
ON movies (popularity);

-- ==========================================
-- 장르 테이블
-- ==========================================
CREATE TABLE genres (
    genre_id NUMBER PRIMARY KEY,
    name VARCHAR2(50) NOT NULL
);

-- ==========================================
-- 영화-장르 연결 테이블
-- ==========================================
CREATE TABLE movie_genres (
    movie_id NUMBER NOT NULL,
    genre_id NUMBER NOT NULL,

    CONSTRAINT pk_movie_genres
        PRIMARY KEY (movie_id, genre_id),

    CONSTRAINT fk_movie_genres_movie
        FOREIGN KEY (movie_id)
        REFERENCES movies(movie_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_movie_genres_genre
        FOREIGN KEY (genre_id)
        REFERENCES genres(genre_id)
        ON DELETE CASCADE
);

-- ==========================================
-- 영화 좋아요 테이블
-- ==========================================
CREATE TABLE movie_likes (
    movie_id NUMBER NOT NULL,
    user_id NUMBER NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT pk_movie_likes
        PRIMARY KEY (movie_id, user_id),

    CONSTRAINT fk_movie_likes_movie
        FOREIGN KEY (movie_id)
        REFERENCES movies(movie_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_movie_likes_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
        ON DELETE CASCADE
);

-- ==========================================
-- 게시판 테이블
-- ==========================================
CREATE TABLE boards (
    board_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR2(50) UNIQUE NOT NULL,
    description VARCHAR2(255),
    sort_order NUMBER DEFAULT 0 NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL
);

-- ==========================================
-- 게시판 카테고리 테이블
-- ==========================================
CREATE TABLE categories (
    category_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    board_id NUMBER NOT NULL,
    name VARCHAR2(50) NOT NULL,
    sort_order NUMBER DEFAULT 0 NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT uq_categories_board_name
        UNIQUE (board_id, name),

    CONSTRAINT fk_categories_board
        FOREIGN KEY (board_id)
        REFERENCES boards(board_id)
        ON DELETE CASCADE
);

DESC categories;
-- ==========================================
-- 게시글 테이블
-- ==========================================
CREATE TABLE posts (
    post_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    board_id NUMBER NOT NULL,
    category_id NUMBER,
    author_id NUMBER NOT NULL,
    movie_id NUMBER,
    title VARCHAR2(200) NOT NULL,
    content CLOB NOT NULL,
    view_count NUMBER DEFAULT 0 NOT NULL,
    like_count NUMBER DEFAULT 0 NOT NULL,
    comment_count NUMBER DEFAULT 0 NOT NULL,
    status VARCHAR2(20) DEFAULT 'PUBLISHED' NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT fk_posts_board
        FOREIGN KEY (board_id)
        REFERENCES boards(board_id),

    CONSTRAINT fk_posts_category
        FOREIGN KEY (category_id)
        REFERENCES categories(category_id)
        ON DELETE SET NULL,

    CONSTRAINT fk_posts_author
        FOREIGN KEY (author_id)
        REFERENCES users(user_id),

    CONSTRAINT fk_posts_movie
        FOREIGN KEY (movie_id)
        REFERENCES movies(movie_id)
        ON DELETE SET NULL
);

-- 게시글 상태
ALTER TABLE posts
ADD CONSTRAINT chk_posts_status
CHECK (status IN ('PUBLISHED', 'HIDDEN', 'DELETED'));

-- 게시글 인덱스
CREATE INDEX idx_posts_board_created
ON posts (board_id, created_at);

CREATE INDEX idx_posts_author_created
ON posts (author_id, created_at);

CREATE INDEX idx_posts_category_created
ON posts (category_id, created_at);

CREATE INDEX idx_posts_movie_created
ON posts (movie_id, created_at);

-- ==========================================
-- 게시글 좋아요 테이블
-- ==========================================
CREATE TABLE post_likes (
    post_id NUMBER NOT NULL,
    user_id NUMBER NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT pk_post_likes
        PRIMARY KEY (post_id, user_id),

    CONSTRAINT fk_post_likes_post
        FOREIGN KEY (post_id)
        REFERENCES posts(post_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_post_likes_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
        ON DELETE CASCADE
);

-- ==========================================
-- 댓글 테이블
-- ==========================================
CREATE TABLE comments (
    comment_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    post_id NUMBER NOT NULL,
    author_id NUMBER NOT NULL,
    parent_comment_id NUMBER,
    content CLOB NOT NULL,
    status VARCHAR2(20) DEFAULT 'PUBLISHED' NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,

    CONSTRAINT fk_comments_post
        FOREIGN KEY (post_id)
        REFERENCES posts(post_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_comments_author
        FOREIGN KEY (author_id)
        REFERENCES users(user_id),

    CONSTRAINT fk_comments_parent
        FOREIGN KEY (parent_comment_id)
        REFERENCES comments(comment_id)
        ON DELETE CASCADE
);

-- 댓글 상태
ALTER TABLE comments
ADD CONSTRAINT chk_comments_status
CHECK (status IN ('PUBLISHED', 'HIDDEN', 'DELETED'));

-- 댓글 인덱스
CREATE INDEX idx_comments_post_parent_created
ON comments (post_id, parent_comment_id, created_at);

SELECT table_name
FROM user_tables
ORDER BY table_name;

SELECT table_name, constraint_name, constraint_type
FROM user_constraints
ORDER BY table_name, constraint_name;

-- 공지사항
CREATE TABLE notices (
    notice_id   NUMBER          PRIMARY KEY,
    title       VARCHAR2(200)   NOT NULL,
    content     CLOB            NOT NULL,
    pinned      CHAR(1)         DEFAULT 'N' NOT NULL,
    created_at  DATE            DEFAULT SYSDATE NOT NULL,
    updated_at  DATE
);

